--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,8 +5,7 @@
     "types": "./dist/index.d.ts",
     "scripts": {
         "build": "tsc",
-        "lint": "eslint .",
-        "test": "jest"
+        "lint": "eslint ."
     },
     "devDependencies": {
         "typescript": "^5.6.3",
