--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "typescript": "^5.6.3",
-        "eslint": "^9.15.0"
+        "eslint": "^9.15.0",
+        "@econeura/config": "*"
     }
 }
