test: implement real unit tests for backend and frontend
- Backend: Added Jest config and health check test
- Frontend: Added Vitest config and App smoke test
- Enabled test scripts in package.json
- Verified locally with turbo run test

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js",
     "type-check": "tsc -p tsconfig.json --noEmit --skipLibCheck",
     "dev": "tsx src/index.ts",
+    "test": "jest",
     "lint": "eslint .",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
