--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,11 @@ on:
       - main
       - develop
 
+env:
+  NODE_VERSION: '20.x'
+  AZURE_WEBAPP_NAME_BACKEND: econeura-backend-production
+  AZURE_WEBAPP_PACKAGE_PATH_BACKEND: 'packages/backend'
+
 permissions:
   id-token: write
   contents: read
@@ -28,7 +33,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
       - name: Install Turbo
@@ -45,16 +50,12 @@ jobs:
         working-directory: out
         run: npx turbo run build --filter=@econeura/backend...
 
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - name: Deploy to App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME_BACKEND }}
-          package: out
+          app-name: ${{ env.AZURE_WEBAPP_NAME_BACKEND }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BACKEND }}
+          package: out/packages/backend
 
   deploy-frontend:
     name: Deploy Frontend
@@ -68,14 +69,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build Frontend
-        run: npx turbo run build --filter=@econeura/web...
+        run: npx turbo run build --filter=@econeura/webapp...
 
       - name: Deploy to Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
@@ -83,5 +84,5 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "packages/frontend/dist"
+          app_location: "packages/frontend"
           skip_app_build: true
