--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm ci
 
       - name: Build Frontend
-        run: npx turbo run build --filter=@econeura/webapp...
+        run: npx turbo run build --filter=@econeura/web...
 
       - name: Deploy to Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
