fix: add JavaScript MIME types for Azure Static Web App

--- a/packages/frontend/staticwebapp.config.json
+++ b/packages/frontend/staticwebapp.config.json
@@ -3,6 +3,10 @@
         "rewrite": "/index.html"
     },
     "mimeTypes": {
-        ".json": "application/json"
+        ".json": "application/json",
+        ".js": "text/javascript",
+        ".mjs": "text/javascript",
+        ".ts": "text/typescript",
+        ".tsx": "text/typescript"
     }
 }
