--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,5 +50,5 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "packages/frontend"
+          app_location: "packages/frontend/dist"
           skip_app_build: true
