--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -34,12 +34,16 @@
     "@types/supertest": "^6.0.3",
     "applicationinsights": "^3.12.0",
     "axios": "^1.7.7",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "cross-env": "^10.1.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "jest": "^30.2.0",
+    "multer": "^2.0.2",
     "openai": "^6.9.1",
     "pg": "^8.16.3",
     "rate-limit-redis": "^4.3.0",
