--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -17,6 +17,9 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@/*": [
+        "src/*"
+      ],
       "@shared/*": [
         "../../packages/shared/*"
       ]
