--- a/.gitignore
+++ b/.gitignore
@@ -72,24 +72,17 @@ packages/*/logs/
 # OS
 .DS_Store
 Thumbs.db
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Coverage
-coverage/
-.nyc_output/
-
-# Temporary files
-*.tmp
-.cache/
-*.bak
-*.temp
-
 # Turbo
 .turbo/
 
+# Uploads
+packages/backend/uploads/
+**/uploads/*.txt
+
 # Azure
 .azure/
+
+*.bak
+packages/*/dist/
+
+**/.env
