--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,6 @@ concurrency:
 
 jobs:
 
-
   deploy-frontend:
     name: Deploy Frontend
     runs-on: ubuntu-latest
@@ -43,12 +42,27 @@ jobs:
 
       - name: Build Frontend
         run: npx turbo run build --filter=@econeura/web...
+      
+      # CRITICAL SECURITY FIX: Retrieve Static Web Apps token from Key Vault instead of GitHub Secrets
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FA9A4EA81D4D402A9EF87AA300D1858C }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B64AEDB71A7941F3945AD76BFA69CE60 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_595743B4C90944A28C71720EEC3F5E3B }}
+      
+      - name: Get Static Web Apps token from Key Vault
+        uses: Azure/get-keyvault-secrets@v1
+        with:
+          keyvault: "econeura-kv-production"
+          secrets: 'AZURE-STATIC-WEB-APPS-API-TOKEN'
+        id: keyvault-secrets
 
       - name: Deploy to Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          azure_static_web_apps_api_token: ${{ steps.keyvault-secrets.outputs.AZURE-STATIC-WEB-APPS-API-TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}  # This is a default GitHub token, not a secret
           action: "upload"
           app_location: "packages/frontend/dist"
           skip_app_build: true
