--- a/.github/workflows/main_econeura-backend-production.yml
+++ b/.github/workflows/main_econeura-backend-production.yml
@@ -23,11 +23,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Install, build, and test
         run: |
-          npm install
+          npm ci
           npm run build --if-present
-          # npm run test --if-present  # Temporarily disabled due to Jest config issue
+          npx turbo run test --filter=@econeura/backend...
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
