feat(ci): add linting and type checking to backend and frontend workflows
FASE 2 Task 2: Add Linting to CI Workflows

VERIFICATION BEFORE CHANGE:
- Ran locally: npx turbo run lint --filter=@econeura/backend... (Passed)
- Ran locally: npx turbo run lint --filter=@econeura/web... (Passed)

CHANGES MADE:
1. Updated .github/workflows/backend.yml
   - Added 'Lint Backend Code' step
   - Added 'Type Check Backend' step
   - Both run before build/test

2. Updated .github/workflows/frontend.yml
   - Added 'Lint Frontend Code' step
   - Added 'Type Check Frontend' step
   - Both run before build/test

IMPACT:
- CI will fail if code style violations or type errors are introduced
- Enforces code quality standards automatically

Checkpoint 2 of FASE 2 checklist: ✅ COMPLETE

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Lint Backend Code
+        run: npx turbo run lint --filter=@econeura/backend...
+
+      - name: Type Check Backend
+        run: npx turbo run type-check --filter=@econeura/backend...
+
       - name: Build Backend
         run: npx turbo run build --filter=@econeura/backend...
 
