--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,9 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: 📚 Documentación
-    url: https://github.com/TU-REPO/ECONEURA-FULL/tree/main/docs
-    about: Consulta la documentación del proyecto
-  - name: 💬 Discusiones
-    url: https://github.com/TU-REPO/ECONEURA-FULL/discussions
-    about: Únete a las discusiones de la comunidad
-
+  - name: Ask a question
+    url: https://github.com/ECONEURA-EMPRESA/ECONEURA-GO/discussions/new?category=q-a
+    about: Ask the community for help
+  - name: Request a feature
+    url: https://github.com/ECONEURA-EMPRESA/ECONEURA-GO/discussions/new?category=ideas
+    about: Share ideas for new features
