feat(ci): optimize deployment artifact size
FASE 2 Task 3: Optimize Deploy Workflow

CHANGES:
- Changed artifact name from 'node-app' to 'backend-app'
- Optimized artifact path to only include:
  - packages/backend/dist (compiled code)
  - packages/backend/package.json
  - packages/backend/package-lock.json
  - node_modules (required for deployment)

BEFORE: Uploaded entire workspace (includes frontend, test files, etc.)
AFTER: Upload only backend deployment files

IMPACT:
- Reduced artifact size (significantly smaller)
- Faster deployment times
- Cleaner deployment package

--- a/.github/workflows/main_econeura-backend-production.yml
+++ b/.github/workflows/main_econeura-backend-production.yml
@@ -32,8 +32,12 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: backend-app
+          path: |
+            packages/backend/dist
+            packages/backend/package.json
+            packages/backend/package-lock.json
+            node_modules
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,7 +50,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: backend-app
 
       - name: Login to Azure
         uses: azure/login@v2
