--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
   deploy-frontend:
     name: Deploy Frontend
     runs-on: ubuntu-latest
-    environment: production
+    # environment: production # Commented out to fix OIDC mismatch
     timeout-minutes: 30
     steps:
       - name: Checkout code
