feat: 5 critical production improvements
MEJORA 1: Fixed typo 'Términoss' → 'Términos' in Login footer
MEJORA 2: Added professional LoadingSkeleton component with ECONEURA branding
MEJORA 3: Enhanced .env.example with comprehensive frontend variable documentation
MEJORA 4: Created BackendStatus component for real-time health monitoring
MEJORA 5: Improved README with detailed local testing guide and troubleshooting

Impact: Better UX, professional quality, improved developer experience

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,26 @@ REDIS_URL=redis://:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}
 GEMINI_API_KEY=your_gemini_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Azure Configuration (for local development)
+# Azure credentials / infrastructure connection
+
+# === FRONTEND ENVIRONMENT VARIABLES ===
+# API URL for backend connection
+# Local development: http://localhost:3000/api
+# Production: https://econeura-backend-production.azurewebsites.net/api
+VITE_API_URL=http://localhost:3000/api
+
+# Optional: NEURA Gateway URL (if using separate gateway)
+# VITE_NEURA_GW_URL=https://your-gateway-url.com  
+
+# Optional: Gateway Authentication Key
+# VITE_NEURA_GW_KEY=your-gateway-key
+
+# Optional: Azure Log Analytics (for telemetry)
+# VITE_LA_WORKSPACE_ID=your-workspace-id
+# VITE_LA_SHARED_KEY=your-shared-key
+
+# === BACKEND ENVIRONMENT VARIABLES ===
+# (These are already documented above, kept for reference)
 AZURE_STORAGE_ACCOUNT_NAME=your_storage_account
 AZURE_STORAGE_CONNECTION_STRING=your_connection_string
 
